--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "next": "^12.1.5",
+    "postman-to-openapi-module": "https://github.com/DefCon-007/postman-to-openapi.git#master-client-side-module",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.7.0"
+    "@netlify/plugin-nextjs": "^4.7.0",
+    "sass": "^1.51.0"
   }
 }
