--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "postman-to-openapi-module": "https://github.com/DefCon-007/postman-to-openapi.git#master-client-side-module",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.2.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.7.0",
