--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@sentry/nextjs": "^6.19.7",
     "next": "^12.1.5",
+    "posthog-js": "^1.56.0",
     "postman-to-openapi-module": "https://github.com/DefCon-007/postman-to-openapi.git#master-client-side-module",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
