--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hot-toast": "^2.2.0"
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.7.0",
